--- a/container-virtual/Dockerfile
+++ b/container-virtual/Dockerfile
@@ -1,2 +1,2 @@
 from dujiaju/container
-RUN apt install -y qemu-system && apt install -y wine && apt install -y wine32 && apt clean autoclean && apt autoremove --yes
+RUN dpkg --add-architecture i386 && apt update && apt install -y qemu-system && apt install -y wine && apt install -y wine32 && apt clean autoclean && apt autoremove --yes
